<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DoubanYP</string>
    <string name="book_search_hint">书籍、作者、关键字</string>
    <string name="search">搜索</string>
    <string name="loading">正在加载...</string>
    <string name="bookInfo">书籍信息</string>
    <string name="btnShowComment">查看评论</string>
    <string name="new_review">评论</string>
    <string name="review_info">评论</string>
    <string name="review_title">评论标题</string>
    <string name="review_content">评论内容</string>
    <string name="btnSave">保存</string>
    <string name="btnCancel">取消</string>
    <string name="order_rule">热门评论</string>
    <string name="order_rule_new">最新评论</string>
    
    
	<string name="menu_delete">删除</string>
	<string name="menu_edit">编辑</string>
    
    
    <string name="review_test">测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试</string>
    
    
    <string name="todo">封面</string>

</resources>