<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFF5F5F5"
    android:orientation="vertical" >

    <include layout="@layout/titlebar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_toLeftOf="@+id/split"
            android:gravity="center" >

            <Button
                android:id="@+id/btnRuleScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:text="@string/order_rule"
                android:textColor="@color/red"
                android:textSize="20sp" />

        </LinearLayout>

        <View
            android:id="@+id/split"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@+id/split"
            android:gravity="center" >

            <Button
                android:id="@+id/btnRuleTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:text="@string/order_rule_new"
                android:textColor="@color/green"
                android:textSize="20sp" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mainRL"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.0" >

        <ListView
            android:id="@+id/android:list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="3.0dip"
            android:cacheColorHint="#00000000"
            android:divider="@color/transparent"
            android:dividerHeight="5.0dip"
            android:listSelector="@color/transparent"
            android:paddingTop="5.0dip"
            android:scrollbarStyle="outsideInset" />

        <RelativeLayout
            android:id="@+id/loading"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#AA111111"
                android:gravity="center"
                android:padding="8dip" >

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="24dip"
                    android:layout_height="24dip"
                    android:layout_marginBottom="6dip"
                    android:layout_marginTop="6dip"
                    android:indeterminate="true" />

                <TextView
                    android:id="@+id/txt_loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dip"
                    android:shadowColor="#000000"
                    android:shadowDx="0"
                    android:shadowDy=".5"
                    android:shadowRadius="1"
                    android:text="@string/loading"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>